fix post-it align

--- a/src/App.scss
+++ b/src/App.scss
@@ -393,6 +393,7 @@ footer.page-footer {
 
 .sessions > div > div.card.card-content {
   padding: 20px;
+  display: grid;
 }
 .sessions > div > div {
   font-family: $product-sans;
